<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:background="@drawable/rounded_dialog_bg"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp">




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidlineLeftTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35"
        />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintRight_toRightOf="@id/guidlineLeftTxt"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/internet"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/errorHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guidlineLeftTxt"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="17dp"
        android:text="@string/no_internet"
        android:gravity="center_vertical"
        android:textStyle="bold"/>

 <TextView
     android:id="@+id/internetDesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guidlineLeftTxt"
        app:layout_constraintTop_toBottomOf="@+id/errorHeading"
        android:textSize="14dp"
        android:text="@string/no_internet_des"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"/>



    <TextView
        android:id="@+id/okayBtn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_yellow_okaybtn"
        app:layout_constraintTop_toBottomOf="@+id/internetDesTv"
        app:layout_constraintStart_toStartOf="@id/guidlineLeftTxt"
        android:text="@string/okay"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15dp"
        android:elevation="4dp"
        android:layout_marginTop="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>