<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/homeLayout"
    tools:context=".ui.splash.SplashActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/greeen">

        <include
            android:id="@+id/homeTopBar"
            layout="@layout/topbar"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>





    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_margin="@dimen/_20sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFiltersLayoutLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topBarLayout"
        app:layout_constraintStart_toStartOf="@id/guidelineFiltersLayoutLeft"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidlineFiltersRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidlineScheduleRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"
            />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterFolderLayout"
        android:layout_width="0dp"
        android:layout_height="35dp"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guidlineFiltersRight"
        >
        <ImageView
            android:id="@+id/folderIv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.2"
            android:src="@drawable/folder_icon"/>


        <TextView
            android:id="@+id/folderTv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="2sp"
            android:text="@string/folder"
            app:layout_constraintStart_toEndOf="@+id/folderIv"
            app:layout_constraintEnd_toStartOf="@+id/filterFolderIv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.55"
            app:layout_constraintHorizontal_bias="0.5"
            android:maxLines="1"
            android:orientation="horizontal"
            android:gravity="center"/>


        <ImageView
            android:id="@+id/filterFolderIv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.1"
            android:src="@drawable/filter_icon"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


     <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterScheduleLayout"
        android:layout_width="0dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guidlineScheduleRight"
        app:layout_constraintWidth_percent="0.2"
        >


        <ImageView
            android:id="@+id/scheduleIv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.2"
            android:src="@drawable/schedule_icon"
            />



        <TextView
            android:id="@+id/scheduleTv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="28sp"
            android:textSize="20sp"
            app:autoSizeStepGranularity="2sp"
            android:text="@string/Schedule"
            app:layout_constraintStart_toEndOf="@+id/scheduleIv"
            app:layout_constraintEnd_toStartOf="@+id/filterScheduleIv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.55"
            app:layout_constraintHorizontal_bias="0.5"
            android:maxLines="1"
            android:orientation="horizontal"
            android:gravity="center"
            />


        <ImageView
            android:id="@+id/filterScheduleIv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.1"
            android:src="@drawable/filter_icon"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/copiletFilteredTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/filterLayout"
        app:layout_constraintEnd_toEndOf="@id/guidlineRight"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@color/red"
        android:text="@string/filtered"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/copiletListRV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/copiletFilteredTv"
        app:layout_constraintStart_toStartOf="@+id/guidlineLeft"
        app:layout_constraintEnd_toEndOf="@+id/guidlineRight"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noCopiletsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/filterLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidlinetopCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidlineleftCircle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
            />

        <ImageView
            android:id="@+id/emptycircle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintLeft_toRightOf="@id/guidlineleftCircle"
            app:layout_constraintTop_toBottomOf="@id/guidlinetopCircle"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/emptycircle"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.65"
            android:src="@drawable/puppy_emptylist"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/emptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@id/guidlineleftCircle"
            app:layout_constraintTop_toBottomOf="@id/guidlinetopCircle"
            app:layout_constraintBottom_toBottomOf="@+id/emptycircle"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="No CoPilets here boss"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>